--- a/CursoJS/aula4.html
+++ b/CursoJS/aula4.html
@@ -16,7 +16,18 @@
     n1.toLocaleString('pt-BR', {style: 'currency', currency: 'BRL'});
     // currency: 'USD/EUR'
     
+    var texto = window.prompt("Oi coisa linda");
+        document.write(texto);
 
+        /* Precedência dos operadores aritméticos
+        * ()
+        * **
+        * * / %
+        * + _
+        */
+
+        // 5 == "5" -> true
+        // 5 === "5" -> false
     </script>
     
 </body>
