--- a/CursoJS/Exercícios/ContarAteNumero.html
+++ b/CursoJS/Exercícios/ContarAteNumero.html
@@ -7,7 +7,7 @@
     <title>Contar até número</title>
     <link rel="stylesheet" href="estilo.css">
     <style>
-    
+        
     </style>
 </head>
 <body>
@@ -21,7 +21,7 @@
             <p>Inicial <input type="text" name="numeroInicial" id="numeroInicial" size="8"></p>
             <p>Final  <input type="text" name="numeroFinal" id="numeroFinal" size="8"></p>
             <p>Passo <input type="text" name="valorStep" id="valorStep" size="8"></p>
-            <p><input type="button" value="Enviar" onclick="Calcula()"></p>
+            <p><input type="button" value="Enviar" onclick="CalculaIntervalo()"></p>
         </div>
         <div id="msg">Preencha os dados acima</div>
 
