--- a/CursoJS/Projetos/Calculadora v2.0/index.html
+++ b/CursoJS/Projetos/Calculadora v2.0/index.html
@@ -16,36 +16,31 @@
     <section>
         <div class="calculator-grid">
             <div class="output">
-                <div class="previous-operand">123 +</div>
-                <div class="current-operand">456</div>
+                <div data-previous-operand class="previous-operand"></div>
+                <div data-current-operand class="current-operand"></div>
             </div>
 
-                <button>%</button>
-                <button>√</button>
-                <button>x²</button>
-                <button>1/x</button>
+                <button data-all-clear class="span-two">CE</button>
+                <button data-delete>DEL</button>
+                <button data-operation>÷</button>
 
-                <button class="span-two">CE</button>
-                <button>DEL</button>
-                <button>÷</button>
-
-                <button>7</button>
-                <button>8</button>
-                <button>9</button>
-                <button>x</button>
+                <button data-number>7</button>
+                <button data-number>8</button>
+                <button data-number>9</button>
+                <button data-operation>x</button>
                 
-                <button>4</button>
-                <button>5</button>
-                <button>6</button>
-                <button>-</button>
+                <button data-number>4</button>
+                <button data-number>5</button>
+                <button data-number>6</button>
+                <button data-operation>-</button>
 
-                <button>1</button>
-                <button>2</button>
-                <button>3</button>
-                <button>+</button>
+                <button data-number>1</button>
+                <button data-number>2</button>
+                <button data-number>3</button>
+                <button data-operation>+</button>
                 
-                <button>0</button>
-                <button>,</button>
+                <button data-number>0</button>
+                <button data-number>.</button>
                 <button class="span-two">=</button>
             </div>
         </div>
