--- a/CursoJS/Projetos/Calculadora v2.0/index.html
+++ b/CursoJS/Projetos/Calculadora v2.0/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Calculadora</title>
     <link rel="stylesheet" href="estilo.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
 
@@ -41,16 +42,13 @@
                 
                 <button data-number>0</button>
                 <button data-number>.</button>
-                <button class="span-two">=</button>
+                <button data-equals class="span-two">=</button>
             </div>
         </div>
     </section>
 
     <footer>
         <p>&copy; JanderSilv</p>
-    </footer>
-
-    <script src="script.js"></script>
-    
+    </footer>    
 </body>
 </html>
