--- a/CursoJS/RocketSeat/CursoES6/index.html
+++ b/CursoJS/RocketSeat/CursoES6/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="bundle.js"></script>
+    <button id="novotodo">Adicionar</button>
+    <!-- <script src="bundle.js"></script> -->
+    <script src="let.js"></script>
 </body>
 </html>
