--- a/CursoJS/RocketSeat/CursoES6/index.html
+++ b/CursoJS/RocketSeat/CursoES6/index.html
@@ -8,7 +8,6 @@
 </head>
 <body>
     <button id="novotodo">Adicionar</button>
-    <!-- <script src="bundle.js"></script> -->
-    <script src="let.js"></script>
+    <script src="bundle.js"></script>
 </body>
 </html>
